# notification_lambda

./: README.md  lambda_function.py  pyproject.toml
