[tool.poetry]
name = "noti-lambda"
version = "0.1.0"
description = ""
authors = ["Noah Nam <noah@apartalk.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"
psycopg2-binary = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
